[tool.poetry]
name = "rotorhazard"
version = "0.0.0"
description = "RotorHazard Timing System"
authors = ["RotorHazard"]

[tool.poetry.dependencies]
fakerpigpio = "^1.0.0"
flask = "^3.0.0"
flask-socketio = "^5.3.6"
flask-sqlalchemy = "^3.1.1"
gevent = "^23.9.1"
monotonic = "^1.6"
python = "^3.10"
requests = "^2.31.0"
serial = "^0.0.97"
six = "^1.16.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"

[tool.ruff]
select = ["ALL"]
extend-exclude = ["test_*.py"]
ignore = [
  "ANN101", # Self... explanatory
  "ANN401", # Opinioated warning on disallowing dynamically typed expressions
  "ERA001", # Comments are allowed
  "D203", # Conflicts with other rules
  "D213", # Conflicts with other rules
  "D417", # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "T201", # Allow the use of print()
  "S104", # Allow binding to all interfaces

  # Formatter conflicts
  "COM812",
  "COM819",
  "D206",
  "E501",
  "ISC001",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "W191",
]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]